--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.8.1
+confusable-homoglyphs==3.3.1    
 Django==5.0.6
+django-registration==3.4        
+django-registration-redux==2.13 
 pillow==10.4.0
 sqlparse==0.5.0
 tzdata==2024.1
